# sensors

./: .gitignore  Lastenheft Bachelorarbeit.xlsx  README.md  bootstrap.sh  esp_matter_modifications.patch  sdkconfig  thesis_eit_latex.pdf:Zone.Identifier
PCB/: PCB-verbesserung_2025-05-29.PCB  PCB-verbesserung_2025-05-29.PCB.brd  PCB-verbesserung_2025-05-29.pcbdoc  PCB-verbesserung_2025-06-02.brd  PCB-verbesserung_2025-06-02.pcbdoc  PCB-verbesserung_2025-06-03.brd  PCB_PCB-verbesserung_2025-06-02.json
main/: CMakeLists.txt  app_main.cpp
main/drivers/: ccs811_hyt271_d6t1a01_i2c.cpp  ccs811_hyt271_d6t1a01_i2c.h
